--- a/sunsettings_base/package.json
+++ b/sunsettings_base/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@coinbase/onchainkit": "^1.1.1",
+    "@farcaster/miniapp-sdk": "^0.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -19,9 +20,9 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@rainbow-me/rainbowkit": "^2.2.8",
     "@tanstack/react-query": "^5.90.2",
+    "boring-avatars": "^1.10.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "boring-avatars": "^1.10.1",
     "cmdk": "^1.1.1",
     "exifr": "^7.1.3",
     "h3-js": "^4.3.0",
