--- a/sunsettings_base/env.example
+++ b/sunsettings_base/env.example
@@ -23,3 +23,6 @@ ETHERSCAN_API_KEY=
 NEXT_PUBLIC_PAYMASTER_AND_BUNDLER_ENDPOINT=ADD_YOUR_PAYMASTER_URL_HERE
 NEXT_PUBLIC_CDP_API_KEY=ADD_YOUR_ONCHAINKIT_KEY_HERE
 NEXT_PUBLIC_WC_PROJECT_ID=ADD_YOUR_PROJECT_ID_HERE
+
+#PRIVY
+NEXT_PUBLIC_PRIVY_APP_ID=ADD_YOUR_PRIVY_APP_ID_HERE
