--- a/sunsettings_base/package.json
+++ b/sunsettings_base/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@coinbase/onchainkit": "^1.1.1",
     "@farcaster/miniapp-sdk": "^0.2.1",
+    "@privy-io/react-auth": "^3.13.1",
+    "@privy-io/wagmi": "^4.0.1",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -19,6 +21,9 @@
     "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@rainbow-me/rainbowkit": "^2.2.8",
+    "@solana-program/system": "^0.10.0",
+    "@solana-program/token": "^0.9.0",
+    "@solana/kit": "^6.0.0",
     "@tanstack/react-query": "^5.90.2",
     "@vercel/analytics": "^1.6.1",
     "boring-avatars": "^1.10.1",
