--- a/sunsettings_base/package.json
+++ b/sunsettings_base/package.json
@@ -35,11 +35,12 @@
     "lucide-react": "^0.544.0",
     "mapbox-gl": "^3.15.0",
     "next": "^15.5.7",
+    "permissionless": "^0.3.4",
     "pinata": "^2.5.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1",
-    "viem": "^2.37.12",
+    "viem": "^2.45.1",
     "wagmi": "^2.17.5"
   },
   "devDependencies": {
